# imaginative-restoration

./: .formatter.exs  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  MCP_SETUP.md  README.md  SETUP.md  TODO.md  au.edu.anu.cyberneticstudio.plist  dev.sh  download_models.py  fly.toml  fnox.toml  imgres-launch-macos.sh  imgres-launch.sh  launch-chrome.sh  mise.toml  mix.exs  package.json  pipeline_test.py  pyproject.toml  rc.xml  run.sh  storytellers.service  test.sh  test_mcp_simple.sh
.claude/: settings.json
.github/workflows/: fly-deploy.yml
.zed/: settings.json
assets/: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
assets/css/: app.css
assets/js/: app.js  boid_canvas.js  boid_canvas_hook.js  sketch_canvas_hook.js  webcam_stream_hook.js
assets/nfsa/: reprocess-video.sh
backlog/: config.yml
backlog/completed/: task-1 - Fix-Tailscale-connectivity-and-try-VNC.md  task-3 - Consolidate-prompts-and-config-endpoints-into-one-page.md  task-8 - Improve-ImaginativeRestorationWeb-tests.md  task-9 - crop-box-not-aligned-correctly-in-admin-view.md
backlog/drafts/: draft-1 - better-change-no-change-tracking-for-sketches.md
backlog/tasks/: task-1 - Fix-Tailscale-connectivity-and-try-VNC.md  task-10 - use-image-difference-and-visual-flash-feedback-more-like-capture-on-change.md  task-13 - Simplify-AppLive-frame-processing-using-start_async.md  (+16 more)
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
lib/: imaginative_restoration.ex  imaginative_restoration_web.ex
scripts/: test_mcp.sh
test/: test_helper.exs
(+105 files in other folders)
