[project]
name = "storytellers"
version = "0.1.0"
description = "Source code for the Storytellers installation. A SOCY x NIDA x NFSA collaboration."
authors = [{ name = "Ben Swift", email = "ben@benswift.me" }]
dependencies = [
    "diffusers>=0.30.2",
    "transformers>=4.44.2",
    "accelerate>=0.34.2",
    "pillow>=8.0.0",
    "opencv-python-headless>=4.5.0",
    "matplotlib>=3.9.2",
    "torchvision>=0.19.1",
    "scikit-image>=0.24.0",
    "pyside6>=6.7.2",
]
readme = "README.md"
requires-python = ">= 3.12"
license = { text = "MIT License" }

[project.urls]
Homepage = "https://github.com/ANUcybernetics/storytellers"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/storytellers"]
